--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
 
         <div class="timer__controls">
 
-            <button data-time="20" class="timer__button">20 seconds</button>
-            <button data-time="300" class="timer__button">5 minutes</button>
-            <button data-time="600" class="timer__button">10 minutes</button>
-            <button data-time="1800" class="timer__button">30 minutes</button>
-            <button data-time="3600" class="timer__button">60 minutes</button>
+            <button data-time="20" class="timer__button">Quick stretch</button>
+            <button data-time="900" class="timer__button">Snack time</button>
+            <button data-time="3600" class="timer__button">Lunch break</button>
 
         </div>
 
